--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>Page Title</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
+
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.0.17/dist/sweetalert2.all.min.js"></script>
 </head>
 
 <body>
@@ -15,7 +17,7 @@
     <div id="file-list"></div>
     <div id="progress">0%</div>
     <progress id="progress-bar" value="0" max="100"></progress>
-    <button onclick="doUpload()">Upload</button>
+    <button onclick="uploadFiles()">Upload</button>
 </body>
 <script>
     const data = new FormData()
@@ -36,7 +38,7 @@
         })
     }
 
-    async function doUpload() {
+    async function uploadFiles() {
         let files = Array.from(await data.entries())
         console.log(files.length)
 
@@ -47,12 +49,20 @@
                 body: data,
             }, (p) => {
                 let pct = ((p.loaded / p.total) * 100).toFixed(2)
-                console.log(pct)
-                document.getElementById("progress").innerHTML = pct +"%"
+
+                document.getElementById("progress").innerHTML = pct + "%"
                 document.getElementById("progress-bar").value = pct
             })
 
-            console.log("Result: ", await response)
+            // swal.fire("Done", "", "success")
+            swal.fire("Done", "", "success").then(() => {
+                document.getElementById("file-list").innerHTML = ""
+                document.getElementById("progress-bar").value = "0"
+                document.getElementById("progress").innerHTML = "0" + "%"
+                data.forEach((val, key, fd) => {
+                    data.delete(key)
+                })
+            })
         }
     }
 
