--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 </head>
 
 <body>
-    <div id="drop-zone" ondrop="dropHandler(event);" ondragover="dragOverHandler(event);">
+    <h1>업로드 연습</h1>
+    <div id="drop-area" ondrop="dropHandler(event);" ondragover="dragOverHandler(event);">
         <p>Drag one or more files to this Drop Zone ...</p>
     </div>
     <div id="file-list"></div>
@@ -85,7 +86,7 @@
     }
 </script>
 <style>
-    #drop-zone {
+    #drop-area {
         border: 5px solid blue;
         width: 200px;
         height: 100px;
