--- a/stream.html
+++ b/stream.html
@@ -25,11 +25,11 @@
     const uploadTmpPath = "data_tmp"
 
     // php
-    const uriTMP = "upload-stream.php"
+    // const uriTMP = "upload-stream.php"
     // const uriFINISH = "move.php"
 
     // go
-    // const uriTMP = "http://localhost:1323/upload-tmp"
+    const uriTMP = "http://localhost:1323/upload-tmp"
     const uriFINISH = "http://localhost:1323/upload-finish"
 
     const headerJSON = {
