--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 </head>
 
 <body>
+    <img class="draggable-image" src="https://img.freepik.com/free-vector/hand-drawn-world-animal-day-background-with-animals_23-2149625089.jpg" />
     <h1>업로드 연습</h1>
     <div id="drop-area" ondrop="dropHandler(event);" ondragover="dragOverHandler(event);">
         <p>Drag one or more files to this Drop Zone ...</p>
